Wikibase Repository: Fix collapse button in sitelinks view
This also fixed the issue that the toggle was not sticky.
See jquery.wikibase.sitelinkgroupview.css

Bug: T329167

--- a/view/resources/jquery/wikibase/themes/default/jquery.wikibase.sitelinkgroupview.mw-collapsible.css
+++ b/view/resources/jquery/wikibase/themes/default/jquery.wikibase.sitelinkgroupview.mw-collapsible.css
@@ -1,7 +1,15 @@
 /**
  * @license GNU GPL v2+
  */
+.wikibase-sitelinkgroupview .wikibase-sitelinkgroupview-heading-section {
+	margin-right: 24px;
+}
+
 .wikibase-sitelinkgroupview > .mw-collapsible-toggle {
+	position: sticky;
+	top: 0;
+	margin-bottom: 0.3em;
+	background-color: #fff;
 	background-position: right;
 	background-repeat: no-repeat;
 	height: 24px;
